KTTL-1770: Fixed Guidelines block spacing and grid-layout. (#1056)

--- a/src/theme/css/frontend/_guiding-principles.scss
+++ b/src/theme/css/frontend/_guiding-principles.scss
@@ -9,7 +9,7 @@
   &__container {
     @apply tw-grid container mx-auto text-center;
 
-    @screen xl {
+    @screen lg2 {
       @apply text-left;
     }
   }
@@ -21,7 +21,7 @@
       @apply col-span-4 col-start-3;
     }
 
-    @screen xl {
+    @screen lg2 {
       @apply col-span-6 col-start-7 order-2;
     }
 
@@ -38,7 +38,7 @@
       @apply col-span-6 col-start-2;
     }
 
-    @screen xl {
+    @screen lg2 {
       @apply col-span-5 col-start-1;
     }
   }
@@ -46,7 +46,7 @@
   &__title {
     @apply font-bold text-px30 leading-px38 tracking-em005;
 
-    @screen xl {
+    @screen lg2 {
       @apply text-px40 leading-px46 tracking-em_001;
     }
   }
@@ -54,7 +54,7 @@
   &__description {
     @apply mt-px8 text-px18 leading-px26 tracking-px05;
 
-    @screen xl {
+    @screen lg2 {
       @apply text-px24 leading-px34 tracking-px05 mt-px20;
     }
   }
@@ -67,7 +67,7 @@
       column-gap: inherit;
     }
 
-    @screen xl {
+    @screen lg2 {
       @apply block mt-px20;
     }
   }
@@ -76,7 +76,7 @@
     @apply block font-bold text-px22 leading-px28 tracking-em005;
 
     &:not(:first-child) {
-      @screen xl {
+      @screen lg2 {
         @apply mr-px28;
       }
     }
@@ -88,7 +88,7 @@
         @apply mb-0;
       }
 
-      @screen xl {
+      @screen lg2 {
         @apply mr-px28;
       }
     }
@@ -102,7 +102,7 @@
       }
     }
 
-    @screen xl {
+    @screen lg2 {
       @apply inline-block text-px26 leading-px32 mt-px28;
     }
   }
@@ -114,7 +114,7 @@
       @apply mt-px75;
     }
 
-    @screen xl {
+    @screen lg2 {
       @apply mt-px58 text-left;
     }
   }
@@ -122,7 +122,7 @@
   &__cta {
     @apply btn;
 
-    @screen xl {
+    @screen lg2 {
       @apply text-px20 leading-px26 tracking-px05;
     }
   }
